    and decompile_predicate_indicator/4 as deprecated.

    Added support for preserving the scope information for operators declared
    using scope directives during compile time. Added information on entity
    declared operators to the XML documenting files. Updated the text, PDF,
    and (X)HTML conversion scripts to print out operator information.

    Moved the internal predicates that construct and access the predicate
    execution context from the compiler to the Prolog config files in order
    to support fine performance tuning that is Prolog compiler dependent.

    Updated the XSB config file in order to support the compilation of modules
    as objects. XSB 3.3 or a later version is now required for compatibility
    with Logtalk.

    Updated the SWI-Prolog config file in order to provide limited support
    for the arithmetic_function/1 proprietary directive (arithmetic functions
    are compile as global instead of as local to the objects or categories
    defining them).

    Updated the "encodings" example in order to ensure that the there is no
    whitespace before the encoding/1 directive.

    Updated the "attvars" example in order to support B-Prolog and XSB. Also
    added support for using attributed variables within Logtalk parametric
    objects and parametric categories. Thanks to Jan Wielemaker, Vítor Santos
    Costa, and Bart Deamon for feedback and implementation suggestions.

    Updated the "profilers" example with preliminary support for the changes
    to execution profiling in the SICStus Prolog 4.2 version.

    Updated the "expansion" example with more sample code on how to combine
    term- and goal-expansion definitions from different hooks objects.


2.42.3 - February 21, 2011

    Allow dynamic predicates declared in a category to be called in "this"
    from within the category. In previous versions, such calls would result
    in a compile-time error, forcing these predicates to be called in "self"